--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <div id="setup-modal" class="fixed inset-0 z-[100] modal-bg flex items-center justify-center hidden p-4">
         <div class="bg-gray-800 w-full max-w-5xl h-[80vh] rounded-xl border border-purple-500 flex flex-col p-6 shadow-2xl">
             <h2 class="text-3xl font-black text-center text-purple-400 uppercase mb-2">Configurazione Torneo</h2>
+            <p class="text-center text-gray-300 mb-4 text-sm">Codice Stanza: <span id="setup-modal-code" class="text-cyan-400 font-mono font-bold text-2xl tracking-widest bg-black/50 px-3 py-1 rounded cursor-pointer select-all">----</span></p>
             <div id="setup-container" class="flex-1 overflow-y-auto grid grid-cols-1 md:grid-cols-2 gap-4 p-2 mb-4 bg-black/20 rounded"></div>
             <div class="flex justify-between mt-auto pt-4 border-t border-gray-700">
                 <button class="px-4 py-2 bg-gray-700 hover:bg-gray-600 rounded text-sm font-bold" onclick="addUniverseSetup()">+ Universo</button>
@@ -299,6 +300,10 @@
             document.getElementById('lobby-screen').classList.add('hidden');
             document.getElementById('game-ui').classList.remove('hidden');
             document.getElementById('room-code-display').textContent = roomId;
+            
+            // Aggiorna anche il codice nel modale di setup (se esiste)
+            const setupCodeEl = document.getElementById('setup-modal-code');
+            if(setupCodeEl) setupCodeEl.textContent = roomId;
 
             // Init Listeners
             initGameListeners();
